// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process Status reducer should handle POLL_STATUS_FAIL 1`] = `
Object {
  "error": "fail",
  "polling": false,
  "status": Object {
    "processed": Array [],
    "processing": Array [],
    "toBeProcessed": Array [],
  },
}
`;

exports[`Process Status reducer should handle POLL_STATUS_SUCCESS 1`] = `
Object {
  "error": null,
  "polling": false,
  "status": Object {
    "processed": Array [
      Object {
        "algo": "Algorithm 2",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 3",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 1",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
    ],
    "processing": Array [
      Object {
        "algo": "Algorithm 2",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 3",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 1",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
    ],
    "toBeProcessed": Array [
      Object {
        "algo": "Algorithm 2",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 3",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
      Object {
        "algo": "Algorithm 1",
        "id": "4bfe8a99-b6bc-44f0-b92d-9451dff10ca1big_buck_bunny.mp4",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`Process Status reducer should hanlde POLL_STATUS_START 1`] = `
Object {
  "error": null,
  "polling": true,
  "status": Object {
    "processed": Array [],
    "processing": Array [],
    "toBeProcessed": Array [],
  },
}
`;

exports[`Process Status reducer should return the initial state 1`] = `
Object {
  "error": null,
  "polling": false,
  "status": Object {
    "processed": Array [],
    "processing": Array [],
    "toBeProcessed": Array [],
  },
}
`;
